--- a/index.html
+++ b/index.html
@@ -85,7 +85,51 @@
           &copy; 2019 by trillo. All rights reserved.
         </div>
       </nav>
-      <main class="hotel-view">Hotel view</main>
+      <main class="hotel-view">
+        <div class="gallery">
+          <figure class="gallery__item">
+            <img src="/img/hotel-1.jpg" alt="Photo if hotel 1" class="gallery__photo">
+          </figure>
+          <figure class="gallery__item">
+            <img src="/img/hotel-2.jpg" alt="Photo if hotel 2" class="gallery__photo">
+          </figure>
+          <figure class="gallery__item">
+            <img src="/img/hotel-3.jpg" alt="Photo if hotel 3" class="gallery__photo">
+          </figure>
+        </div>
+        <div class="overview">
+          <h1 class="overview__heading">
+            Hotel Las Palmas
+          </h1>
+          <div class="overview__start">
+            <svg class="overview__icon-star">
+              <use xlink:href="#star" />
+            </svg>
+            <svg class="overview__icon-star">
+              <use xlink:href="#star" />
+            </svg>
+            <svg class="overview__icon-star">
+              <use xlink:href="#star" />
+            </svg>
+            <svg class="overview__icon-star">
+              <use xlink:href="#star" />
+            </svg>
+            <svg class="overview__icon-star">
+              <use xlink:href="#star" />
+            </svg>
+          </div>
+          <div class="overview__location">
+            <svg class="overview__icon-location">
+              <use xlink:href="#location" />
+            </svg>
+            <button class="btn-inline">Albuefiera, Portugal</button>
+          </div>
+          <div class="overview__rating">
+            <div class="overview__rating-average">8.6</div>
+            <div class="overview__rating-count">429 votes</div>
+          </div>
+        </div>
+      </main>
     </div>
   </div>
 
@@ -130,6 +174,17 @@
     <symbol version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" id="map">
       <path
         d="M19.447 3.718l-6-3c-0.281-0.141-0.613-0.141-0.895 0l-5.63 2.815-5.606-1.869c-0.306-0.102-0.64-0.051-0.901 0.138s-0.415 0.49-0.415 0.811v13.001c0 0.379 0.214 0.725 0.553 0.894l6 3c0.141 0.070 0.294 0.106 0.447 0.106s0.307-0.035 0.447-0.106l5.63-2.814 5.606 1.869c0.305 0.1 0.64 0.049 0.901-0.139s0.415-0.49 0.415-0.81v-13.002c0.001-0.379-0.213-0.725-0.552-0.894zM8 5.231l4-2v11.763l-4 2v-11.763zM2 4l4 1.333v11.661l-4-2v-10.994zM18 16.227l-4-1.334v-11.662l4 2v10.996z">
+      </path>
+    </symbol>
+
+    <symbol version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" id="star">
+      <path
+        d="M18.8 8.022h-6.413l-2.387-6.722-2.389 6.722h-6.412l5.232 3.947-1.871 6.929 5.44-4.154 5.438 4.154-1.869-6.929 5.231-3.947zM10 12.783l-3.014 2.5 1.243-3.562-2.851-2.3 3.522 0.101 1.1-4.040 1.099 4.040 3.521-0.101-2.851 2.3 1.243 3.562-3.012-2.5z">
+      </path>
+    </symbol>
+    <symbol version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" id="location">
+      <path
+        d="M10 2.009c-2.762 0-5 2.229-5 4.99 0 4.774 5 11 5 11s5-6.227 5-11c0-2.76-2.238-4.99-5-4.99zM10 9.76c-1.492 0-2.7-1.209-2.7-2.7s1.208-2.7 2.7-2.7c1.49 0 2.699 1.209 2.699 2.7s-1.209 2.7-2.699 2.7z">
       </path>
     </symbol>
 
