--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </ul>
             <div class="recommend">
               <p class="recommend__count">
-
+                Natalie and 3 other friends recommend this hotel.
               </p>
               <div class="recommend__friends">
                 <img src="img/user-3.jpg" alt="Friend 1" class="recommend_photos">
