--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
             </figure>
             <figure class="gallery__item">
               <img
-                src="/img/hotel-2.jpg"
+                src="img/hotel-2.jpg"
                 alt="Photo of hotel 2"
                 class="gallery__photo"
               />
             </figure>
             <figure class="gallery__item">
               <img
-                src="/img/hotel-3.jpg"
+                src="img/hotel-3.jpg"
                 alt="Photo of hotel 3"
                 class="gallery__photo"
               />
